fix: z-index menu

--- a/src/components/header/menu/Menu.module.scss
+++ b/src/components/header/menu/Menu.module.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     flex-wrap: wrap;
     transition: all 400ms ease;
+    z-index: 11;
     @media (max-width: 1200px) {
       padding: 20px 2vw;
     }
